--- a/app/src/main/res/layout-night/video_row_item.xml
+++ b/app/src/main/res/layout-night/video_row_item.xml
@@ -21,8 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
-        android:background="#555555"
-        android:text="108:24"
+        android:background="@color/VLA_durationbox"
+        android:text="@string/videoRow_duration_sample"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/ivThumbnail"
         app:layout_constraintEnd_toEndOf="@+id/ivThumbnail" />
@@ -35,7 +35,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:gravity="center"
-        android:text="Chillhop Music Jazzy Lofi Beats and whatnot rest o f title"
+        android:text="@string/videoTitle_sample"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="24dp"
-        android:text="Chillhop Music * 8,844,844,844 views * September 24, 2009"
+        android:text="@string/videoRow_info_sample"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
