--- a/app/src/main/res/layout-night/comment_row_item.xml
+++ b/app/src/main/res/layout-night/comment_row_item.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@id/tvReplyPadding"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/comment_profilepicture" />
 
     <TextView
         android:id="@+id/tvProfileAndTime"
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        android:text="Bruce Wayne * 1 week ago"
+        android:text="@string/comment_profileandtime_sample"
         android:textIsSelectable="true"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="Comment Body"
+        android:text="@string/comment_body_sample"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="500 replies"
+        android:text="@string/comment_numReplies_sample"
         android:textColor="#717171"
         android:textIsSelectable="true"
         android:textStyle="italic"
