--- a/app/src/main/res/layout/comment_row_item.xml
+++ b/app/src/main/res/layout/comment_row_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/comment_profilepicture"
         app:layout_constraintStart_toEndOf="@id/tvReplyPadding"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        android:text="Bruce Wayne * 1 week ago"
+        android:text="@string/comment_profileandtime_sample"
         android:textColor="#353535"
         android:textIsSelectable="true"
         android:textStyle="bold"
@@ -35,7 +36,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:linksClickable="false"
-        android:text="Comment Body"
+        android:text="@string/comment_body_sample"
         android:textColor="#353535"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="500 replies"
+        android:text="@string/comment_numReplies_sample"
         android:textIsSelectable="true"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
