added dark theme for all android versions

--- a/app/src/main/res/layout-night/video_page.xml
+++ b/app/src/main/res/layout-night/video_page.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".VideoPage">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/youtube_fragment"
+        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragmentX"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:foregroundGravity="top"
+        android:gravity="top"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/youtube_player_fragment" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnBlackScreen"
         android:layout_width="wrap_content"
@@ -35,14 +47,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:useCompatPadding="false" />
-
-    <com.google.android.youtube.player.YouTubePlayerView
-        android:id="@+id/youtube_player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -74,7 +78,7 @@
         app:layout_constraintBottom_toBottomOf="@id/svExtras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/youtube_player" />
+        app:layout_constraintTop_toBottomOf="@id/youtube_fragment" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -88,7 +92,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/youtube_player" />
+        app:layout_constraintTop_toBottomOf="@id/youtube_fragment" />
 
     <TextView
         android:id="@+id/tvVideoInfo"
