--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,8 @@
     <style name="ActionBarRed" parent="Widget.AppCompat.ActionBar">
         <item name="background">@color/red</item>
     </style>
+
+    <style name="Theme.YouTubeTimer.noTitle" parent="Theme.YouTubeTimer">
+        <item name="android:windowActionBar">false</item>
+    </style>
 </resources>
